Archive2/04/4f25eb72eb600b/output
+ g++ -std=c++11 -Wall -Wextra -pedantic main.cpp
main.cpp: In member function 'void d::fn()':
main.cpp:14:14: error: reference to 'x' is ambiguous
  void fn() { x = 5; }
              ^
main.cpp:6:6: note: candidates are: int b::x
  int x;
      ^
main.cpp:2:9: note:                 int a::x
     int x;
         ^
